--- a/anipat/css/style.css
+++ b/anipat/css/style.css
@@ -24,6 +24,7 @@
   }
 
   .search_input{
+  padding: 0 10px;
   color: white;
   border: 0;
   outline: 0;
@@ -36,7 +37,7 @@
 
   .searchbar:hover > .search_input{
   padding: 0 10px;
-  width: 450px;
+  width: 270px;
   caret-color:red;
   transition: width 0.4s linear;
   }
