--- a/anipat/css/style.css
+++ b/anipat/css/style.css
@@ -1,5 +1,14 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300i,400,400i,600,700|Poppins:200,200i,300,300i,400,500,500i,600,700,800,900&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300i,400,400i,600,700|Poppins:200,200i,300,300i,400,500,500i,600,700,800,900&display=swap");
+
+.btn-dark{
+  background-color: #ed5b0d;
+  border-color:#ed5b0d;
+}
+.btn-dark:hover{
+  border-color:#fa8d81 ;
+  background-color: #fa8d81;
+}
 /* line 1, ../../Arafath/CL/january 2020/240. Animal/HTML/scss/_extend.scss */
 .flex-center-start {
   display: -webkit-box;
@@ -102,16 +111,24 @@ body {
   font-weight: normal;
   font-style: normal;
 }
-
+.box{
+  width: 100%;
+  height: 50%;
+  margin-top: -20%;
+  margin-bottom: -10%;
+}
 /* line 11, ../../Arafath/CL/january 2020/240. Animal/HTML/scss/_reset.scss */
-.img {
+img {
   max-width: 100%;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
 }
-
+.img{
+  height: 100%;
+  width: 100%;
+}
 /* line 15, ../../Arafath/CL/january 2020/240. Animal/HTML/scss/_reset.scss */
 a,
 .button {
