--- a/anipat/css/style.css
+++ b/anipat/css/style.css
@@ -44,7 +44,7 @@
   transition: width 0.4s linear;
   }
 
-  .searchbar:hover > .search_input{
+  .searchbar > .search_input{
   padding: 0 10px;
   width: 270px;
   caret-color:red;
