--- a/ElaAdmin-master/ElaAdmin-master/assets/css/style.css
+++ b/ElaAdmin-master/ElaAdmin-master/assets/css/style.css
@@ -19,6 +19,7 @@ Googel Fonts  */
 
 */
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700");
+table tr:hover{background-color: #aeb6b4 !important; }
 .bg-flat-color-1 {
   background: #00c292; }
 
