--- a/client/src/app/pages/product/product.component.html
+++ b/client/src/app/pages/product/product.component.html
@@ -1,7 +1,9 @@
+
+
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Services</li>
+      <li class="breadcrumb-item active" aria-current="page">Products</li>
     </ol>
   </nav>
 
@@ -11,7 +13,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="bradcam_text text-center">
-                    <h3>Services</h3>
+                    <h3>Products</h3>
                 </div>
             </div>
         </div>
@@ -25,9 +27,8 @@
         <div class="row justify-content-center ">
             <div class="col-lg-7 col-md-10">
                 <div class="section_title text-center mb-95">
-                    <h3>Services for your pets</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna.</p>
+                    <h3>Our Products</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
                 </div>
             </div>
         </div>
@@ -39,10 +40,10 @@
                         SORT BY
                     </button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">A -> Z</a>
-                        <a class="dropdown-item" href="#">Z -> A</a>
-                        <a class="dropdown-item" href="#">Highest to lowest price</a>
-                        <a class="dropdown-item" href="#">Separated link</a>
+                        <a class="dropdown-item" href="#">A-Z</a>
+                        <a class="dropdown-item" href="#">Z-A</a>
+                        <a class="dropdown-item" href="#">Price:High - Low </a>
+                        <a class="dropdown-item" href="#">Price:Low - High</a>
                     </div>
                 </div>
             </div>
@@ -57,11 +58,11 @@
             </div>
         </div>
         <div class="row justify-content-center" >
-            <div class="col-lg-4 col-md-6" *ngFor="let row of services ; let i = index">
+            <div class="col-lg-4 col-md-6" *ngFor="let row of products ; let i = index">
                 <div class="single_service">
                     <div class="service_thumb service_icon_bg_1 d-flex align-items-center justify-content-center">
                         <div class="service_icon">
-                            <img src="assets/service/service_icon_1.png" alt="">
+                            <img src="../../../assets/img/Product/bo-3-can-cau-long-tho.jpg" alt="">
                         </div>
                     </div>
                     <div class="service_content text-center">
@@ -79,9 +80,13 @@
                 </div>
             </div>
         </div>
-    </div>
 </div>
 <!-- service_area_end -->
+
+
+<!-- team_area_start  -->
+
+<!-- team_area_start  -->
 
 <!-- contact_anipat_start  -->
 <div class="contact_anipat anipat_bg_1">
@@ -91,12 +96,11 @@
                 <div class="contact_text text-center">
                     <div class="section_title text-center">
                         <h3>Why go with Anipat?</h3>
-                        <p>Because we know that even the best technology is only as good as the people behind it.
-                            24/7 tech support.</p>
+                        <p>Because we know that even the best technology is only as good as the people behind it. 24/7 tech support.</p>
                     </div>
                     <div class="contact_btn d-flex align-items-center justify-content-center">
                         <a href="contact.html" class="boxed-btn4">Contact Us</a>
-                        <p>Or <a href="tel: +35 752 7322"> +35 752 7322</a></p>
+                        <p>Or  <a href="tel: +35 752 7322"> +35 752 7322</a></p>
                     </div>
                 </div>
             </div>
